[build-system]
build-backend = 'setuptools.build_meta'
requires = ["setuptools >= 62.0"]

[project]
name = "pyCANape"
description = 'Pythonic wrapper around the VECTOR CANape API'
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
keywords = [
    "CANape",
    "Measurement",
    "Calibration",
    "automotive"
]
authors = [
  { name = "Artur Drogunow", email = "artur.drogunow@zf.com" },
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "psutil",
    "numpy>=1.21",
    "typing-extensions;python_version<'3.8'",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black==23.9.*;python_version>='3.8'",
    "ruff==0.1.*",
    "mypy==1.6.*",
    "types-backports;python_version<'3.8'",
    "pre-commit",
]
doc = [
    "furo",
    "sphinx==7.1.*",
]

[project.urls]
Documentation = "https://pycanape.readthedocs.io"
Issues = "https://github.com/zariiii9003/pycanape/issues"
Source = "https://github.com/zariiii9003/pycanape"
Homepage = "https://github.com/zariiii9003/pycanape"

[tool.setuptools.dynamic]
version = {attr = "pycanape.__version__"}

[tool.setuptools.package-data]
"pycanape" = [
  "py.typed",
]

[tool.black]
include = '^/((docs|src)/.*|setup)\.pyi?$'

[tool.mypy]
show_error_codes = true
ignore_missing_imports = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
warn_unused_ignores = false
warn_redundant_casts = true
disallow_any_generics = true
disallow_subclassing_any = true
exclude = [
    "^docs/.*",
    '^.*venv/.*',
]


[[tool.mypy.overrides]]
module = [
    "psutil",
]
ignore_missing_imports = true

[tool.ruff]
select = [
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",  # pycodestyle
    "EM",  # flake8-errmsg
    "F",  # pyflakes
    "G",  # flake8-logging-format
    "I",  # isort
    "ISC",  # flake8-implicit-str-concat
    "PIE",  # flake8-pie
    "RSE",  # flake8-raise
    "S",  # flake8-bandit
    "SIM",  # flake8-simplify
    "UP",  # pyupgrade
    "W",  # pycodestyle
]
ignore = [
    "E501",  # line too long
]

[tool.ruff.isort]
known-first-party = ["pycanape"]
